compiler/tests/fixtures/valid/action_with_embargo_time_period.viv
// Action with a time-period embargo (not forever)

action greet:
    roles:
        @greeter:
            as: initiator
        @target:
            as: recipient
    embargoes:
        embargo:
            time: 3 days
