compiler/tests/fixtures/invalid/semantics/association_role_special.viv
// Action with per-role association referencing a special role

action bad-association:
    roles:
        @actor:
            as: initiator
    associations:
        roles:
            @hearer: guilt
